Remove inline display:none;

--- a/views/years/_2015.haml
+++ b/views/years/_2015.haml
@@ -7,7 +7,7 @@
       %h2 iOS 9, OS X El Capitan, watchOS 2, Swift 2
 
     %time{itemprop: "startDate", content: "2015-06-08T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
