--- a/views/years/_2017.haml
+++ b/views/years/_2017.haml
@@ -7,7 +7,7 @@
       %h2 iOS 11, macOS High Sierra, watchOS 4, Xcode 9
 
     %time{itemprop: "startDate", content: "2017-06-05T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} San Jose McEnery Convention Center
       %span{itemprop: "streetAddress"} 150 W San Carlos St.
       %span{itemprop: "addressLocality"} San Jose
