--- a/views/years/_2018.haml
+++ b/views/years/_2018.haml
@@ -7,7 +7,7 @@
       %h2 iOS 12, macOS Mojave, watchOS 5, Xcode 10
 
     %time{itemprop: "startDate", content: "2016-06-013T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} San Jose McEnery Convention Center
       %span{itemprop: "streetAddress"} 150 W San Carlos St.
       %span{itemprop: "addressLocality"} San Jose
