--- a/views/years/_2010.haml
+++ b/views/years/_2010.haml
@@ -7,7 +7,7 @@
       %h2 iPhone 4
 
     %time{itemprop: "startDate", content: "2010-06-07T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
