--- a/views/years/_2011.haml
+++ b/views/years/_2011.haml
@@ -7,7 +7,7 @@
       %h2 iOS 5, OS X Lion, & iCloud
 
     %time{itemprop: "startDate", content: "2011-06-06T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
