--- a/views/years/_2012.haml
+++ b/views/years/_2012.haml
@@ -7,7 +7,7 @@
       %h2 iOS 6 & OS X Mountain Lion
 
     %time{itemprop: "startDate", content: "2012-06-11T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
