--- a/views/years/_2013.haml
+++ b/views/years/_2013.haml
@@ -7,7 +7,7 @@
       %h2 iOS 7, OS X Mavericks, Xcode 5
 
     %time{itemprop: "startDate", content: "2013-06-10T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
