--- a/views/years/_2014.haml
+++ b/views/years/_2014.haml
@@ -7,7 +7,7 @@
       %h2 iOS 8, OS X Yosemite, Xcode 6, Swift
 
     %time{itemprop: "startDate", content: "2014-06-03T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
