--- a/views/years/_2016.haml
+++ b/views/years/_2016.haml
@@ -7,7 +7,7 @@
       %h2 iOS 10, macOS Sierra, watchOS 3, Xcode 8
 
     %time{itemprop: "startDate", content: "2016-06-03T10:00"}
-    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true}
       %span{itemprop: "name"} Moscone West
       %span{itemprop: "streetAddress"} 747 Howard St.
       %span{itemprop: "addressLocality"} San Francisco
