--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,6 +23,8 @@
     %meta{content: "#603cba", name: "msapplication-TileColor"}
     %meta{content: "#ffffff", name: "theme-color"}
 
+    %link{rel: "search", type: 'application/opensearchdescription+xml', href: "/open-search.xml", title: "ASCIIwwdc Search"}
+
     %meta{property: "og:site_name", content: "ASCIIwwdc"}
     - if @session
       %meta{property: "og:url", content: url(@session) }
