Remove nonessential information from opensearch.xml

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,7 @@
     %meta{content: "#603cba", name: "msapplication-TileColor"}
     %meta{content: "#ffffff", name: "theme-color"}
 
-    %link{rel: "search", type: 'application/opensearchdescription+xml', href: "/open-search.xml", title: "ASCIIwwdc"}
+    %link{rel: "search", type: 'application/opensearchdescription+xml', href: "/opensearch.xml", title: "ASCIIwwdc"}
 
     %meta{property: "og:site_name", content: "ASCIIwwdc"}
     - if @session
